navialignment fixes

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -125,7 +125,7 @@
 
 			#nav > ul > li:first-child
 			{
-				margin-left: 0;
+				margin-left: -3em;
 			}
 
 			#nav > ul > li.break
